[package]
name = "rcloner"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
fzf-wrapped = "0.1.3"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
